--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ dependencies:
   intl: ^0.16.0
   http: ^0.12.0+2
     
-  provider: ^3.1.0
+  provider: 3.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
